crates/toml_edit/tests/snapshots/invalid/float/us-before-dot.stderr
TOML parse error at line 1, column 18
  |
1 | us-before-dot = 1_.2
  |                  ^
`_` may only go between digits
